Implement gear CRUD API
